
bridge_t38
------------------
 * A new module for the bridging framework, this bridge technology acts in the
   same fashion as bridge_simple, save that it helps to maintain the state of
   T.38 for two channels passing a fax through Asterisk. This helps to resolve
   several esoteric issues that can occur when channels are removed from a
   bridge after completing a T.38 fax.

ConfBridge
------------------
 * A new "timeout" user profile option has been added. This configures the number
   of seconds that a participant may stay in the ConfBridge after joining. When
   the time expires, the user is ejected from the conference and CONFBRIDGE_RESULT
   is set to "TIMEOUT" on the channel.

chan_sip
------------------
 * The websockets_enabled option has been added to the general section of
   sip.conf.  The option is enabled by default to match the previous behavior.
   The option should be disabled when using res_pjsip_transport_websockets to
   ensure chan_sip will not conflict with PJSIP websockets.

Dialplan Functions
------------------
 * The HOLD_INTERCEPT dialplan function now actually exists in the source tree.
   While support for the events was added in Asterisk 13.4.0, the function
   accidentally never made it in. That function is now present, and will cause
   the 'hold' raised by a channel to be intercepted and converted into an
   event instead.

res_pjsip_outbound_registration
-------------------------------
 * A new 'fatal_retry_interval' option has been added to outbound registration.
   When set (default is zero), and upon receiving a failure response to an
   outbound registration, registration is retried at the given interval up to
   'max_retries'.

 * If res_statsd is loaded and a StatsD server is configured, basic statistics
   regarding the state of outbound registrations will now be emitted. This
   includes:
   - A GAUGE statistic for the overall number of outbound registrations, i.e.:
       PJSIP.registrations.count